--- a/Core/templates/Core/snippets/header.html
+++ b/Core/templates/Core/snippets/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-bg" style="height: 50px; font-size: 13px; z-index:2; box-shadow:2px 2px 10px rgb(0,0,0,0.1); background-color: white;">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-bg  shadow-sm" style="height: 50px; font-size: 13px; z-index:2;  background-color: white;">
    <div class="container">
         <!-- <a class="sidebar-toggle d-flex">
  <i class="hamburger align-self-center"></i>
@@ -286,6 +286,7 @@
                      <a class="dropdown-item  pb-2 pt-2" href="{% url 'playground' %}"><i class="fa fa1 fa-code mr-1" ></i> Playground</a>
                       -->
                       <a class="dropdown-item  pb-2 pt-2" href="/blog/create/" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-pencil mr-1"></i> Write an article</a>
+                      <a class="dropdown-item  pb-2 pt-2" href="{% url 'analytics' %}" style="color: #546E7A; font-size: 13px;"><i class="fa fa-line-chart mr-1" style="color: rgb(229,120,81,0.6);"></i> Analytics</a>
                      
                      <a class="dropdown-item  pb-2 pt-2" href="{% url 'bookmarks' %}" style="color: #546E7A; font-size: 13px;"><i class="fa fa1 fa-bookmark mr-1"></i> Bookmarks</a>
                      <a class="dropdown-item  pb-2 pt-2" style="color: #546E7A; font-size: 13px;" href="{% url 'notifications' %}"><i class="fa fa1 fa-bell mr-1"></i> Notifications</a>
